data/derived/comb/progs/unify/prog1136.ml.out
Characters 67-75:
  wwhile((let helper x = (f x, f x = (f b)) in helper b), b);;
                                               ^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
